# Weather-App

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  preferences.py  watchlist.py  weather.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/middleware/: error_handler.py  logging.py
backend/app/models/: location.py  preferences.py  user.py  watchlist.py
backend/app/repositories/: location_repository.py  preferences_repository.py  user_repository.py  watchlist_repository.py
backend/app/schemas/: auth.py  preferences.py  watchlist.py  weather.py
backend/app/services/: auth_service.py  geocoding.py  mock_weather.py  preferences_service.py  watchlist_service.py  weather_client.py  weather_service.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_auth_api.py  test_preferences_api.py  test_watchlist_api.py
backend/app/tests/unit/: test_auth_service.py  test_watchlist_service.py  test_weather_service.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  jest.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: ErrorBoundary.test.tsx  authSlice.test.ts  utils.test.ts  weatherSlice.test.ts
(+35 files in other folders)
